brat/test/golden/error/vecpat2.brat.golden
Error in test/golden/error/vecpat2.brat@FC {start = Pos {line = 3, col = 5}, end = Pos {line = 3, col = 21}}:
fst3(some(x)) = none
    ^^^^^^^^^^^^^^^^

  Branch cannot be reached

